--- a/src/ShipmondoApi.Dotnet/ShipmondoApi.Dotnet.csproj
+++ b/src/ShipmondoApi.Dotnet/ShipmondoApi.Dotnet.csproj
@@ -14,7 +14,7 @@
     <RootNamespace>ShipmondoApi.Dotnet</RootNamespace>
     <Version>1.0.0</Version>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\ShipmondoApi.Dotnet.xml</DocumentationFile>
-    <RepositoryUrl>https://github.com/GIT_USER_ID/GIT_REPO_ID.git</RepositoryUrl>
+    <RepositoryUrl>https://github.com/DumbSolutions/ShipmondoApi.Dotnet.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageReleaseNotes>Minor update</PackageReleaseNotes>
   </PropertyGroup>
