--- a/.github/workflows/publish-to-nuget.yml
+++ b/.github/workflows/publish-to-nuget.yml
@@ -17,4 +17,4 @@ jobs:
       - name: "dotnet pack"
         run: dotnet pack src/ShipmondoApi.Dotnet/ShipmondoApi.Dotnet.csproj --include-symbols --include-source --output nupkgs
       - name: "dotnet nuget push"
-        run: dotnet nuget push "nupkgs/*.nupkg" --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
+        run: dotnet nuget push "nupkgs/*.symbols.nupkg" --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
